--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,9 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "zustand": "^4.4.7"
   },
   "scripts": {
