--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,14 @@
   "description": "DigiDiary Backend Server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "cross-env PORT=5000 node server.js",
+    "dev": "cross-env PORT=5000 nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
